--- a/CoinView/GoogleService-Info.plist
+++ b/CoinView/GoogleService-Info.plist
@@ -3,25 +3,25 @@
 <plist version="1.0">
 <dict>
 	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string>ca-app-pub-3940256099942544/2934735716</string>
+	<string></string>
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string>ca-app-pub-3940256099942544/4411468910</string>
+	<string></string>
 	<key>CLIENT_ID</key>
-	<string>753240422393-cvri3docqmqnbsl3c2k68tk91dosrm37.apps.googleusercontent.com</string>
+	<string></string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.753240422393-cvri3docqmqnbsl3c2k68tk91dosrm37</string>
+	<string></string>
 	<key>API_KEY</key>
-	<string>AIzaSyDq54UWY7uRcvHnJvbXMXlkan2wlU1wz5M</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
-	<string>753240422393</string>
+	<string></string>
 	<key>PLIST_VERSION</key>
-	<string>1</string>
+	<string></string>
 	<key>BUNDLE_ID</key>
-	<string>victor.CoinApp</string>
+	<string></string>
 	<key>PROJECT_ID</key>
-	<string>coinview-crypto</string>
+	<string></string>
 	<key>STORAGE_BUCKET</key>
-	<string>coinview-crypto.appspot.com</string>
+	<string></string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:753240422393:ios:5f1598f033636fe5</string>
+	<string></string>
 	<key>DATABASE_URL</key>
-	<string>https://coinview-crypto.firebaseio.com</string>
+	<string></string>
 </dict>
 </plist>
